<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.audiobook.NowPlaying">

    <ImageView
        android:id="@+id/now_playing_song_image"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="7"
        android:src="@drawable/zootopia_menu" />

    <TextView
        android:id="@+id/now_playing_song_name"
        style="@style/SongNameStyle"
        tools:text="@string/song_name" />

    <TextView
        android:id="@+id/now_playing_artist_name"
        style="@style/ArtistNameStyle"
        tools:text="@string/artist_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_dimen">

        <TextView
            android:id="@+id/now_playing_current_duration"
            style="@style/DefaultDurationStyle"
            android:text="@string/default_duration" />

        <SeekBar
            android:id="@+id/now_playing_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_dimen" />

        <TextView
            android:id="@+id/now_playing_total_duration"
            style="@style/TotalDurationStyle" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height">

        <ImageButton
            android:id="@+id/now_playing_storage_button"
            android:layout_width="@dimen/button_small_dimen"
            android:layout_height="@dimen/button_small_dimen"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/now_playing_prev_button"
            android:background="@null"
            android:src="@drawable/storage" />

        <ImageButton
            android:id="@+id/now_playing_prev_button"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@id/now_playing_play_button"
            android:background="@null"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/now_playing_play_button"
            android:layout_width="@dimen/list_height"
            android:layout_height="@dimen/list_height"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/now_playing_next_button"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/now_playing_play_button"
            android:background="@null"
            android:src="@drawable/next" />

        <ImageButton
            android:id="@+id/now_playing_share_button"
            android:layout_width="@dimen/button_small_dimen"
            android:layout_height="@dimen/button_small_dimen"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/now_playing_next_button"
            android:background="@null"
            android:src="@drawable/share" />

    </RelativeLayout>

</LinearLayout>